.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-db-connection-test-service
spec:
  selector:
    app: app-db-connection-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
